# prpr

./: .coverage  CLAUDE.md  LICENSE  README.md  pyproject.toml  test-validation.md  tx-PRPR‑001.md
.claude/: settings.local.json
.github/workflows/: ci.yml
prpr/: __init__.py  __main__.py  classifier.py  config.py  gh.py  io.py
tests/data/: sample_gh.json
tests/integration/: test_cli.py
tests/unit/: test_classifier.py  test_config.py  test_config_edge_cases.py  test_gh.py  test_io.py  test_main.py
